--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@types/node": "^20.1.3",
     "@vitejs/plugin-vue": "^4.1.0",
     "less": "^4.1.3",
     "typescript": "^5.0.2",
     "unplugin-auto-import": "^0.15.3",
+    "unplugin-element-plus": "^0.7.1",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.2",
     "vue-tsc": "^1.4.2"
