--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install"
   },
   "dependencies": {
     "axios": "^1.4.0",
     "element-plus": "^2.3.4",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
     "nprogress": "^0.2.0",
     "vue": "^3.2.47",
     "vue-router": "^4.2.0",
@@ -19,12 +22,19 @@
   "devDependencies": {
     "@types/node": "^20.1.3",
     "@vitejs/plugin-vue": "^4.1.0",
+    "husky": "^8.0.3",
     "less": "^4.1.3",
+    "lint-staged": "^13.2.3",
+    "mrm": "^2.6.2",
+    "prettier": "^3.0.0",
     "typescript": "^5.0.2",
     "unplugin-auto-import": "^0.15.3",
     "unplugin-element-plus": "^0.7.1",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.2",
     "vue-tsc": "^1.4.2"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,css,scss,md,vue}": "prettier --write"
   }
 }
