--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-plus": "^2.3.4",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
+    "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "vue": "^3.2.47",
     "vue-router": "^4.2.0",
