--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "lodash": "^4.17.21",
+    "mitt": "^3.0.1",
     "nprogress": "^0.2.0",
     "vue": "^3.2.47",
     "vue-router": "^4.2.0",
